[gd_scene load_steps=2 format=3 uid="uid://d2shk4b3e116w"]

[ext_resource type="Script" path="res://Tasks/Numpad.gd" id="1_kf71x"]

[node name="Window" type="Window"]
initial_position = 2
size = Vector2i(200, 320)
unresizable = true
popup_window = true
content_scale_aspect = 1
script = ExtResource("1_kf71x")

[node name="Enter" type="Button" parent="."]
offset_left = 136.0
offset_top = 264.0
offset_right = 184.0
offset_bottom = 312.0
text = "GO"

[node name="Button0" type="Button" parent="."]
offset_left = 8.0
offset_top = 264.0
offset_right = 120.0
offset_bottom = 312.0
text = "0"

[node name="Button1" type="Button" parent="."]
offset_left = 8.0
offset_top = 200.0
offset_right = 56.0
offset_bottom = 248.0
text = "1"

[node name="Button2" type="Button" parent="."]
offset_left = 72.0
offset_top = 200.0
offset_right = 120.0
offset_bottom = 248.0
text = "2"

[node name="Button3" type="Button" parent="."]
offset_left = 136.0
offset_top = 200.0
offset_right = 184.0
offset_bottom = 248.0
text = "3"

[node name="Button4" type="Button" parent="."]
offset_left = 8.0
offset_top = 136.0
offset_right = 56.0
offset_bottom = 184.0
text = "4"

[node name="Button5" type="Button" parent="."]
offset_left = 72.0
offset_top = 136.0
offset_right = 120.0
offset_bottom = 184.0
text = "5"

[node name="Button6" type="Button" parent="."]
offset_left = 136.0
offset_top = 136.0
offset_right = 184.0
offset_bottom = 184.0
text = "6"

[node name="Button7" type="Button" parent="."]
offset_left = 8.0
offset_top = 72.0
offset_right = 56.0
offset_bottom = 120.0
text = "7"

[node name="Button8" type="Button" parent="."]
offset_left = 72.0
offset_top = 72.0
offset_right = 120.0
offset_bottom = 120.0
text = "8"

[node name="Button9" type="Button" parent="."]
offset_left = 136.0
offset_top = 72.0
offset_right = 184.0
offset_bottom = 120.0
text = "9"

[node name="Display" type="Panel" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 176.0
offset_bottom = 56.0

[node name="Label" type="Label" parent="Display"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 40.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="close_requested" from="." to="." method="Kill"]
[connection signal="pressed" from="Enter" to="." method="GoButton"]
[connection signal="pressed" from="Button0" to="." method="ButtonZero"]
[connection signal="pressed" from="Button1" to="." method="ButtonOne"]
[connection signal="pressed" from="Button2" to="." method="ButtonTwo"]
[connection signal="pressed" from="Button3" to="." method="ButtonThree"]
[connection signal="pressed" from="Button4" to="." method="ButtonFour"]
[connection signal="pressed" from="Button5" to="." method="ButtonFive"]
[connection signal="pressed" from="Button6" to="." method="ButtonSix"]
[connection signal="pressed" from="Button7" to="." method="ButtonSeven"]
[connection signal="pressed" from="Button8" to="." method="ButtonEight"]
[connection signal="pressed" from="Button9" to="." method="ButtonNine"]
